Fix different GHoloRowEntity versions